--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
@@ -16,7 +16,7 @@
       "scripts/background.js"
     ]
   },
-  "permissions": [ "tabs", "\u003Call_urls>", "cookies", "contextMenus", "unlimitedStorage", "notifications", "storage", "clipboardWrite" ],
+  "permissions": [ "tabs", "\u003Call_urls>", "cookies", "contextMenus", "notifications", "storage", "clipboardWrite" ],
   "browser_action": {
     "default_icon": {
       "48": "images/icon-48.png"
